--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "yajra/laravel-oci8": "^5.5"
     },
     "require-dev": {
+        "composer/composer": "^2.2",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
