--- a/docs/.env_example
+++ b/docs/.env_example
@@ -24,8 +24,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=gdbhythethong@gmail.com
+MAIL_PASSWORD=mexnhgnkmavmkcqx
 MAIL_ENCRYPTION=ssl
 
 PUSHER_APP_ID=632384
