--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore .env file containing sensitive information
 .env
+# Ignore composer.lock file containing sensitive information
+composer.lock
 
 # Ignore the Laravel /vendor directory
 /vendor/
