--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /node_modules/
 
 # Ignore config files
+/config/auth.php
 /config/database.php
 /config/filesystems.php
 /config/organization.php
