--- a/docs/.env_example
+++ b/docs/.env_example
@@ -1,6 +1,6 @@
 APP_NAME=qlbv
 APP_ENV=production
-APP_KEY=base64:AMTw1rJVuAEi3UTNT4Btol1tntna6AmqLQC6Yt1zqq0=
+APP_KEY=
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=https://localhost
