--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,11 +1,7 @@
 FROM nginx:alpine
 
 # Copy nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
-
-# Create nginx user
-RUN addgroup -g 1000 -S nginx \
-    && adduser -S -D -H -u 1000 -h /var/cache/nginx -s /sbin/nologin -G nginx -g nginx nginx
+COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
 
 # Create necessary directories
 RUN mkdir -p /var/www/public \
