--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
         "pusher/pusher-php-server": "^3.2",
         "rap2hpoutre/fast-excel": "^3.2",
         "santigarcor/laratrust": "5.0.*",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^3.1",
         "tymon/jwt-auth": "^1.0",
